deprecated/azure/templates/mgmt-r7730/mainTemplate.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string",
      "metadata": {
        "description": "Deployment location"
      },
      "defaultValue": "[resourceGroup().location]"
    },
    "cloudGuardVersion": {
      "type": "string",
      "allowedValues": [
        "R77.30 - Bring Your Own License"
      ],
      "defaultValue": "R77.30 - Bring Your Own License",
      "metadata": {
        "description": "Version of Check Point vSEC"
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Administrator password"
      },
      "defaultValue": ""
    },
    "authenticationType": {
      "type": "string",
      "allowedValues": [
        "password",
        "sshPublicKey"
      ],
      "defaultValue": "password",
      "metadata": {
        "description": "Authentication type"
      }
    },
    "sshPublicKey": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Administrator SSH public key"
      }
    },
    "vmName": {
      "type": "string",
      "metadata": {
        "description": "Name of the Check Point Security Gateway"
      }
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_D3_v2",
      "metadata": {
        "description": "Size of the VM"
      }
    },
    "virtualNetworkName": {
      "type": "string",
      "metadata": {
        "description": "The name of the virtual network"
      },
      "defaultValue": "vnet"
    },
    "virtualNetworkAddressPrefix": {
      "type": "string",
      "metadata": {
        "description": "The address prefix of the virtual network"
      },
      "defaultValue": "10.0.0.0/16"
    },
    "Subnet1Name": {
      "type": "string",
      "metadata": {
        "description": "The name of the 1st subnet"
      },
      "defaultValue": "Frontend"
    },
    "Subnet1Prefix": {
      "type": "string",
      "metadata": {
        "description": "The address prefix of the 1st subnet"
      },
      "defaultValue": "10.0.1.0/24"
    },
    "Subnet1StartAddress": {
      "type": "string",
      "metadata": {
        "description": "The first available address on the 1st subnet"
      },
      "defaultValue": "10.0.1.10"
    },
    "vnetNewOrExisting": {
      "type": "string",
      "defaultValue": "new",
      "allowedValues": [
        "new",
        "existing"
      ],
      "metadata": {
        "Description": "Indicates whether the virtual network is new or existing"
      }
    },
    "virtualNetworkExistingRGName": {
      "type": "string",
      "metadata": {
        "description": "Resource Group of the existing virtual network"
      },
      "defaultValue": ""
    },
    "managementGUIClientNetwork": {
      "type": "string",
      "metadata": {
        "description": "Allowed GUI clients"
      },
      "defaultValue": "0.0.0.0/0"
    },
    "installationType": {
      "type": "string",
      "metadata": {
        "description": "Installation Type"
      },
      "defaultValue": "management",
      "allowedValues": [
        "management",
        "custom"
      ]
    },
    "bootstrapScript": {
      "type": "string",
      "metadata": {
        "description": "Bootstrap script"
      },
      "defaultValue": ""
    },
    "allowDownloadFromUploadToCheckPoint": {
      "type": "string",
      "allowedValues": [
        "true",
        "false"
      ],
      "defaultValue": "true",
      "metadata": {
        "description": "Automatically download Blade Contracts and other important data. Improve product experience by sending data to Check Point"
      }
    },
    "additionalDiskSizeGB": {
      "type": "int",
      "defaultValue": 0,
      "metadata": {
        "description": "Amount of additional disk space (in GB)"
      },
      "minValue": 0,
      "maxValue": 3995
    },
    "diskType": {
      "type": "string",
      "defaultValue": "Standard_LRS",
      "metadata": {
        "description": "The type of the OS disk. Premium is applicable only to DS machine sizes"
      },
      "allowedValues": [
        "Standard_LRS",
        "Premium_LRS"
      ]
    },
    "preview": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Deploy the staged image"
      },
      "allowedValues": [
        "",
        "-preview"
      ]
    },
    "baseUrl": {
      "type": "string",
      "metadata": {
        "artifactsBaseUrl": ""
      },
      "defaultValue": "https://s3-us-west-2.amazonaws.com/azure.templates/marketplace-management"
    }
  },
  "variables": {
    "templateName": "management",
    "templateVersion": "20181107",
    "location": "[parameters('location')]",
    "offers": {
      "R77.30 - Bring Your Own License": "BYOL"
    },
    "offer": "[variables('offers')[parameters('cloudGuardVersion')]]",
    "osVersions": {
      "R77.30 - Bring Your Own License": "R7730"
    },
    "osVersion": "[variables('osVersions')[parameters('cloudGuardVersion')]]",
    "installationType": "[if(equals(variables('osVersion'), 'R8020'), 'management', parameters('installationType'))]",
    "isBlink": "[bool('false')]",
    "computeApiVersion": "2017-03-30",
    "storageApiVersion": "2016-01-01",
    "networkApiVersion": "2016-06-01",
    "deploymentsApiVersion": "2016-02-01",
    "storageAccountName": "[concat('bootdiag', uniqueString(resourceGroup().id, deployment().name))]",
    "storageAccountType": "Standard_LRS",
    "diskSizeGBR7730": 50,
    "diskSizeGB": "[add(parameters('additionalDiskSizeGB'), variables(concat('diskSizeGB', variables('osVersion'))))]",
    "customData": "[concat('#!/bin/bash\n', '\n', 'LOG_FILE=/var/log/custom-data.log\n', 'exec >>$LOG_FILE 2>&1\n', '\n', '# description: echo instance metadata\n', '# args :\n', '# optional: string contatining api version date.\n', '# default is to \"2017-08-01\".\n', '# usage :\n', '# getInstanceMetadata \"2017-12-01\"\n', 'function getInstanceMetadata {\n', '    # get instance metadata using Azure Instance Metadata service:\n', '    if test -z \"$#\" ; then\n', '        api_version=\"$1\"\n', [...]
    "imageOfferR7730": "check-point-r77-10",
    "imageOffer": "[concat(variables(concat('imageOffer', variables('osVersion'))), parameters('preview'))]",
    "imagePublisher": "checkpoint",
    "imageReferenceBYOL": {
      "offer": "[variables('imageOffer')]",
      "publisher": "[variables('imagePublisher')]",
      "sku": "[concat(if(equals(variables('osVersion'), 'R8020'), 'mgmt', 'sg'),'-byol')]",
      "version": "latest"
    },
    "imageReferenceMGMT5": {
      "offer": "[variables('imageOffer')]",
      "publisher": "[variables('imagePublisher')]",
      "sku": "mgmt-5",
      "version": "latest"
    },
    "imageReference": "[variables(concat('imageReference', variables('offer')))]",
    "nic1Name": "[concat(parameters('vmName'), '-eth0')]",
    "linuxConfigurationpassword": {},
    "linuxConfigurationsshPublicKey": {
      "disablePasswordAuthentication": "true",
      "ssh": {
        "publicKeys": [
          {
            "keyData": "[parameters('sshPublicKey')]",
            "path": "/home/notused/.ssh/authorized_keys"
          }
        ]
      }
    },
    "linuxConfiguration": "[variables(concat('linuxConfiguration',parameters('authenticationType')))]",
    "planBYOL": {
      "name": "[concat(if(equals(variables('osVersion'), 'R8020'), 'mgmt', 'sg'),'-byol')]",
      "product": "[variables('imageOffer')]",
      "publisher": "[variables('imagePublisher')]"
    },
    "planMGMT5": {
      "name": "mgmt-5",
      "product": "[variables('imageOffer')]",
      "publisher": "[variables('imagePublisher')]"
    },
    "plan": "[variables(concat('plan', variables('offer')))]",
    "publicIPAddressName": "[parameters('vmName')]",
    "publicIPAddressId": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]",
    "nsgName": "[concat(parameters('vmName'), '-nsg')]",
    "nsgId": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]",
    "bootstrapScript64": "[base64(parameters('bootstrapScript'))]",
    "allowUploadDownload": "[parameters('allowDownloadFromUploadToCheckPoint')]",
    "networkSetupURL": "[concat(parameters('baseUrl'),'/vnet-1-subnet-', parameters('vnetNewOrExisting'), '.json')]",
    "sicKey": "notused",
    "managementGUIClientNetwork": "[parameters('managementGUIClientNetwork')]"
  },
  "resources": [
    {
      "apiVersion": "2018-02-01",
      "name": "pid-cad9cfed-843e-554d-a348-a42352708fab",
      "type": "Microsoft.Resources/deployments",
      "properties": {
        "mode": "Incremental",
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "resources": []
        }
      }
    },
    {
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[variables('storageAccountName')]",
      "apiVersion": "[variables('storageApiVersion')]",
      "location": "[variables('location')]",
      "sku": {
        "name": "[variables('storageAccountType')]"
      },
      "kind": "Storage"
    },
    {
      "name": "networkSetup",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "[variables('deploymentsApiVersion')]",
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('networkSetupURL')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "location": {
            "value": "[variables('location')]"
          },
          "apiVersion": {
            "value": "[variables('networkApiVersion')]"
          },
          "virtualNetworkName": {
            "value": "[parameters('virtualNetworkName')]"
          },
          "virtualNetworkAddressPrefix": {
            "value": "[parameters('virtualNetworkAddressPrefix')]"
          },
          "Subnet1Name": {
            "value": "[parameters('Subnet1Name')]"
          },
          "Subnet1Prefix": {
            "value": "[parameters('Subnet1Prefix')]"
          },
          "vnetNewOrExisting": {
            "value": "[parameters('vnetNewOrExisting')]"
          },
          "virtualNetworkExistingRGName": {
            "value": "[parameters('virtualNetworkExistingRGName')]"
          }
        }
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "[variables('networkApiVersion')]",
      "location": "[variables('location')]",
      "name": "[variables('publicIPAddressName')]",
      "properties": {
        "idleTimeoutInMinutes": 30,
        "publicIPAllocationMethod": "Static",
        "dnsSettings": {
          "domainNameLabel": "[concat(toLower(parameters('vmName')), '-', uniquestring(resourceGroup().id, deployment().name))]"
        }
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "[variables('networkApiVersion')]",
      "location": "[variables('location')]",
      "name": "[variables('nsgName')]",
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "properties": {
              "description": "Allow inbound SSH connection",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "[variables('managementGUIClientNetwork')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "100",
              "direction": "Inbound"
            }
          },
          {
            "name": "GAiA-portal",
            "properties": {
              "description": "Allow inbound HTTPS access to the GAiA portal",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "[variables('managementGUIClientNetwork')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "110",
              "direction": "Inbound"
            }
          },
          {
            "name": "SmartConsole-1",
            "properties": {
              "description": "Allow inbound access using the SmartConsole GUI client",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "18190",
              "sourceAddressPrefix": "[variables('managementGUIClientNetwork')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "120",
              "direction": "Inbound"
            }
          },
          {
            "name": "SmartConsole-2",
            "properties": {
              "description": "Allow inbound access using the SmartConsole GUI client",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "19009",
              "sourceAddressPrefix": "[variables('managementGUIClientNetwork')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "130",
              "direction": "Inbound"
            }
          },
          {
            "name": "Logs",
            "properties": {
              "description": "Allow inbound logging connections from managed gateways",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "257",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "140",
              "direction": "Inbound"
            }
          },
          {
            "name": "ICA-pull",
            "properties": {
              "description": "Allow security gateways to pull a SIC certificate",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "18210",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "150",
              "direction": "Inbound"
            }
          },
          {
            "name": "CRL-fetch",
            "properties": {
              "description": "Allow security gateways to fetch CRLs",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "18264",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "160",
              "direction": "Inbound"
            }
          },
          {
            "name": "Policy-fetch",
            "properties": {
              "description": "Allow security gateways to fetch policy",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "18191",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": "170",
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "[variables('networkApiVersion')]",
      "dependsOn": [
        "[resourceId('Microsoft.Resources/deployments', 'networkSetup')]",
        "[variables('nsgId')]",
        "[variables('publicIPAddressId')]"
      ],
      "location": "[variables('location')]",
      "name": "[variables('nic1Name')]",
      "properties": {
        "enableIPForwarding": false,
        "networkSecurityGroup": {
          "id": "[variables('nsgId')]"
        },
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAddress": "[parameters('Subnet1StartAddress')]",
              "privateIPAllocationMethod": "Static",
              "PublicIpAddress": {
                "Id": "[variables('publicIPAddressId')]"
              },
              "subnet": {
                "id": "[concat(reference('networkSetup').outputs.vnetId.value, '/subnets/', parameters('Subnet1Name'))]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "[variables('computeApiVersion')]",
      "dependsOn": [
        "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', variables('nic1Name'))]"
      ],
      "location": "[variables('location')]",
      "name": "[parameters('vmName')]",
      "plan": "[variables('plan')]",
      "properties": {
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": "true",
            "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', variables('storageAccountName')), variables('storageApiVersion')).primaryEndpoints.blob]"
          }
        },
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nic1Name'))]",
              "properties": {
                "primary": true
              }
            }
          ]
        },
        "osProfile": {
          "adminPassword": "[parameters('adminPassword')]",
          "adminUsername": "notused",
          "computerName": "[toLower(parameters('vmName'))]",
          "customData": "[base64(variables('customData'))]",
          "linuxConfiguration": "[variables('linuxConfiguration')]"
        },
        "storageProfile": {
          "imageReference": "[variables('imageReference')]",
          "osDisk": {
            "caching": "ReadWrite",
            "createOption": "FromImage",
            "diskSizeGB": "[variables('diskSizeGB')]",
            "name": "[parameters('vmName')]",
            "managedDisk": {
              "storageAccountType": "[parameters('diskType')]"
            }
          }
        }
      }
    }
  ],
  "outputs": {
    "IPAddress": {
      "type": "string",
      "value": "[reference(variables('publicIPAddressId')).IpAddress]"
    },
    "FQDN": {
      "type": "string",
      "value": "[reference(variables('publicIPAddressId')).dnsSettings.fqdn]"
    }
  }
}
